# rust-playground

advanced/auto_gippity/: .env  Cargo.toml
advanced/auto_gippity/schemas/: api_schema.json
advanced/auto_gippity/src/: main.rs
advanced/clipstash/: Cargo.toml
advanced/clipstash/migrations/: 20240520054309_api_key.sql
advanced/http-server/public/: hello.html  index.html
advanced/http-server/src/: main.rs  server.rs  website_handler.rs
advanced/invaders/: Cargo.toml
advanced/invaders/src/: invaders.rs  main.rs  player.rs
advanced/mars_calc/src/: main.rs
advanced/my_proc_macro/: Cargo.toml
advanced/my_proc_macro/src/: lib.rs
advanced/pdown/: Cargo.toml
advanced/pdown/src/: main.rs
advanced/uchat/: Cargo.toml
advanced/uchat/frontend/: Cargo.toml
advanced/uchat/shared/endpoint/: Cargo.toml
advanced/uchat/shared/endpoint/src/: lib.rs
advanced/uchat/shared/endpoint/src/post/: endpoint.rs  types.rs
advanced/uchat/shared/endpoint/src/user/: endpoint.rs
advanced/web_template/: Cargo.toml  database.json
advanced/web_template/src/: code_template.rs  main.rs
basics/src/: main.rs
bevy/bevy-ball-game/: Cargo.toml  index.html
bevy/bevy-ball-game/bally/: bally.js  bevy-ball-game.d.ts  bevy-ball-game.js  bevy-ball-game_bg.wasm.d.ts
bevy/bevy-ball-game/src/: asset_loader.rs  events.rs  main.rs  systems.rs
bevy/bevy-breakout/: Cargo.toml
bevy/bevy-breakout/src/: main.rs
bevy/learn-bevy/src/: main.rs
bevy/sky-invaders/: Cargo.toml
bevy/sky-invaders/src/: asset_loader.rs  asteroids.rs  camera.rs  collision_detection.rs  debug.rs  (+9 more)
(+121 files in other folders)
