[package]
name = "uchat_endpoint"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
load-dotenv = "0.1.2"
serde = { version = "1.0.203", features = ["derive"] }
thiserror = "1.0.61"
url = { version = "2.5.2", features = ["serde"] }
uuid = { version = "1.8.0", features = ["v4", "serde", "js"] }

uchat_domain = { path = "../domain" }
